# esteid-certificates

./: .travis.yml  CHANGELOG.md  LICENCE.md  MANIFEST.in  README.md  setup.py
autoupdate/: Justfile  README.md  pyproject.toml  update.py
esteid_certificates/: __init__.py  constants.py
esteid_certificates/files/: EID_Q_2024R.pem  SK_TIMESTAMPING_AUTHORITY_2020.pem  SK_TIMESTAMPING_AUTHORITY_2021.pem  SK_TIMESTAMPING_AUTHORITY_2022.pem  SK_TIMESTAMPING_AUTHORITY_2023.pem  SK_TIMESTAMPING_UNIT_2024E.pem  SK_TIMESTAMPING_UNIT_2024R.pem  SK_TIMESTAMPING_UNIT_2025E.pem  SK_TIMESTAMPING_UNIT_2025R.pem  SK_TSA_CA_2023E.pem  SK_TSA_CA_2023R.pem  demo_tsu_ecc_2023.pem  demo_tsu_rsa_2023.pem
esteid_certificates/tests/: test_functions.py
